2008-05-01  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc revision 1.495

2008-05-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm: Add a user-editable definition of Gamma at the head of
	PostScript output files.  This currently affects only grayscale images.
	Bug #1869824

2008-04-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/graphics.c (adjust_offsets do_plot) src/graphics.h
	src/save.c (save_offsets) src/save.h src/set.c (set_offsets)
	src/show.c (show_offsets) src/unset.c (unset_offsets) docs/gnuplot.doc:
	Allow graph offsets to be given in graph coordinates.
	Feature Request #1849366

	* demo/electron.dem:  Do not pretend x2 is a separately scaled axis.
	Bug #1744139

2008-04-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm: Remove specific references to Windows 3.1

2008-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): The windows and postscript terminals place
	the xlabel text with the character baseline on the bottom edge of the
	canvas.  This causes any descenders to be clipped.  This patch leaves an
	extra 1/5 line height of empty space at the bottom.  This fixes windows
	and postscript, but introduces a small waste of space on most other
	terminal types.
	Bug #1918293

2008-04-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c term/win.trm (WIN_set_color):  Preserve setting of
	dash type and linewidth when a new color is selected.
	Allow dash types with linewidth > 1.
	Bug #1863361

2008-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options):  "set term post ..." was losing options on
	the command line that appeared after "fontfile 'foo' ".
	Remove extraneous an c_token++.

	* src/graphics.c (plot_points) src/plot2d.c (get_data):  Allow the
	points in "with linespoints" to accept all the extra properties that